--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=boardGameHelper
 spring.datasource.url=jdbc:mysql://192.168.1.4:3306/boardgame_db
 spring.datasource.username=root
 spring.datasource.password=${DATABASE_PASSWORD}
+
+server.tomcat.max-http-post-size=31457280
+
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+spring.http.multipart.max-file-size=30MB
+spring.http.multipart.max-request-size=30MB
